Fixed BUG#6022: Stored procedure shutdown problem with self-calling function.   Fixed the pre-caching of functions. It now gives the expected stack overrun   error for functions recursing too deep.